file: make sure to cancel reading if the worker was aborted

otherwise we end up stuck waiting for the thread to terminate while the
thread is busy needlessly reading the file, when all we wanted was
mimetype data.

BUG: 358231

(cherry picked from commit b9e5af7babc9d68af70e303528ed027e3d61d501)